--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,8 @@
 @import "font";
 @import "base";
 @import "layout";
-@import "modules/example";
+@import "modules/header";
+@import "modules/page";
+@import "modules/pantheon-nav";
+@import "modules/card";
+@import "modules/footer";
