--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -2,14 +2,67 @@
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   align-items: flex-start;
   border-radius: 8px;
-  border: 2px solid var(--Blue, #279ef8);
-  background: var(--Background, #fff);
-}
-.card-save {
-  position: absolute;
+  border: 2px solid#279ef8;
 }
 
+.card-top {
+  position: relative;
+}
 .card-img {
+  border-radius: 6px 6px 0 0;
+  width: 100%;
+}
+.card-save {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+}
+.card-title {
+  color: var(--blue);
+  font-family: "Caesar Dressing";
+  font-size: 20px;
+  font-weight: 400;
+  padding: 8px 12px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.Panthéon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  color: var(--darck-grey);
+  font-family: "Bubbler One";
+  font-size: 20px;
+  font-weight: 400;
+}
+.card-text {
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 10px;
+  align-self: stretch;
+  color: var(--darck-grey);
+  font-family: "Bubbler One";
+  font-size: 16px;
+  font-weight: 400;
+}
+.cards {
+  margin-left: 402px;
+  margin-right: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  gap: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
