--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   gap: 40px;
   align-self: stretch;
-  background: #bcbfc3;
+  background: var(--light-grey);
 }
 .footer-nav {
   display: flex;
@@ -33,7 +33,7 @@ hr {
   width: 100%;
 }
 .footer-credit {
-  color: var(--Text-secondary, #000);
+  color: #000;
   font-family: "Bubbler One";
   font-size: 16px;
   font-weight: 400;
