--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -4,17 +4,19 @@ h1 {
   font-size: 40px;
   font-weight: 400;
   margin-top: 40px;
-  margin-left: 405px;
+  margin-left: 402px;
+  margin-right: 80px;
 }
 .page-card {
   display: flex;
-  width: 955px;
+  // width: 955px;
   padding: 12px 16px;
   flex-direction: column;
   align-items: flex-start;
   border-radius: 8px;
   border: 2px solid #515050;
-  margin-left: 405px;
+  margin-left: 402px;
+  margin-right: 80px;
   margin-top: 64px;
 }
 .page-categrie {
