--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -6,10 +6,12 @@
   align-items: flex-start;
   border-radius: 8px;
   border: 2px solid#279ef8;
+  width: calc((100% - 40px) / 3);
 }
 
 .card-top {
   position: relative;
+  width: 100%;
 }
 .card-img {
   border-radius: 6px 6px 0 0;
