--- a/src/scss/modules/_pantheon-nav.scss
+++ b/src/scss/modules/_pantheon-nav.scss
@@ -1,6 +1,13 @@
 .pantheon-nav {
-  margin-left: 80px;
-  position: fixed;
+  margin-left: 12px;
+  margin-right: 12px;
+  position: relative;
+}
+@media (min-width: 1025px) {
+  .pantheon-nav {
+    position: fixed;
+    margin-left: 80px;
+  }
 }
 .pantheon-nav-title {
   color: var(--Text-main, #515050);
@@ -8,22 +15,21 @@
   font-size: 24px;
   font-weight: 400;
   margin-bottom: 16px;
+  margin-top: 32px;
 }
 .pantheon-nav-buttons {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
-  align-self: stretch;
 }
 .pantheon-grec {
-  display: flex;
   display: flex;
   padding: 12px 8px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
-  width: 305px;
+  min-width: 305px;
+  width: 100%;
   border-radius: 8px;
   background: #279ef8;
   color: #fff;
@@ -37,8 +43,8 @@
   padding: 12px 8px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
-  width: 305px;
+  min-width: 305px;
+  width: 100%;
   border-radius: 8px;
   background: #f8af27;
   color: #fff;
@@ -52,8 +58,8 @@
   padding: 12px 8px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
-  width: 305px;
+  min-width: 305px;
+  width: 100%;
   border-radius: 8px;
   background: #12965d;
   color: #fff;
@@ -67,8 +73,8 @@
   padding: 12px 8px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
-  width: 305px;
+  min-width: 305px;
+  width: 100%;
   border-radius: 8px;
   background: #f82727;
   color: #fff;
@@ -76,4 +82,13 @@
   font-size: 20px;
   font-weight: 400;
   border: none;
+}
+@media (max-width: 1025px) {
+  .pantheon-egypt,
+  .pantheon-grec,
+  .pantheon-nord,
+  .pantheon-romain {
+    display: flex;
+    align-self: stretch;
+  }
 }
