--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -6,7 +6,12 @@
   align-items: flex-start;
   border-radius: 8px;
   border: 2px solid#279ef8;
-  width: calc((100% - 40px) / 3);
+  width: calc((100% - 20px) / 2);
+}
+@media (min-width: 1024px) {
+  .card {
+    width: calc((100% - 40px) / 3);
+  }
 }
 
 .card-top {
@@ -16,6 +21,12 @@
 .card-img {
   border-radius: 6px 6px 0 0;
   width: 100%;
+}
+@media (max-width: 700px) {
+  .card-img {
+    height: 216px;
+    object-fit: cover;
+  }
 }
 .card-save {
   width: 24px;
@@ -67,4 +78,10 @@
   gap: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
+}
+@media (max-width: 1024px) {
+  .cards {
+    margin-left: 12px;
+    margin-right: 12px;
+  }
 }
