--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -7,11 +7,21 @@
   align-self: stretch;
   background: var(--light-grey);
 }
+@media (max-width: 1025px) {
+  .footer {
+    padding: 40px 12px;
+  }
+}
 .footer-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
+}
+@media (max-width: 1025px) {
+  .footer-nav {
+    align-items: end;
+  }
 }
 .footer-nav-categories {
   display: flex;
@@ -21,6 +31,13 @@
   font-family: "Bubbler One";
   font-size: 20px;
   font-weight: 400;
+}
+@media (max-width: 1025px) {
+  .footer-nav-categories {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
 }
 .footer-nav-imgs {
   display: flex;
@@ -32,6 +49,7 @@ hr {
   padding: 0 80px;
   width: 100%;
 }
+
 .footer-credit {
   color: #000;
   font-family: "Bubbler One";
