--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -4,13 +4,52 @@
   font-weight: 400;
 }
 .header-nav {
-  display: none;
+  display: flex;
   align-items: center;
   gap: 32px;
 }
-@media (min-width: 1024px) {
+#nav {
+  display: none;
+  position: fixed;
+  width: 100%;
+  top: 88px;
+  z-index: 3;
+}
+#nav.is-active {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+  padding: 20px 12px;
+  border-top: 1px solid var(--Text-secondary, #000);
+  background: var(--Background-components, #bcbfc3);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+#header-nav-categories {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+  font-family: "Bubbler One";
+  font-size: 20px;
+  font-weight: 400;
+}
+#header-nav-light {
+  border-radius: 4px;
+  border: 1px solid var(--Text-secondary, #000);
+  background: var(--Text-main, #515050);
+  display: flex;
+  padding: 8px 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+@media (max-width: 1024px) {
   .header-nav {
-    display: flex;
+    display: none;
   }
 }
 @media (min-width: 1024px) {
