--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -7,9 +7,14 @@ h1 {
   margin-left: 402px;
   margin-right: 80px;
 }
+@media (max-width: 1024px) {
+  h1 {
+    margin-right: 12px;
+    margin-left: 12px;
+  }
+}
 .page-card {
   display: flex;
-  // width: 955px;
   padding: 12px 16px;
   flex-direction: column;
   align-items: flex-start;
@@ -18,6 +23,12 @@ h1 {
   margin-left: 402px;
   margin-right: 80px;
   margin-top: 64px;
+}
+@media (max-width: 1024px) {
+  .page-card {
+    margin-right: 12px;
+    margin-left: 12px;
+  }
 }
 .page-categrie {
   color: #515050;
