--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  color: #000;
+  color: var(--black);
   font-family: "Bubbler One";
   font-size: 20px;
   font-weight: 400;
@@ -51,7 +51,7 @@ hr {
 }
 
 .footer-credit {
-  color: #000;
+  color: var(--black);
   font-family: "Bubbler One";
   font-size: 16px;
   font-weight: 400;
