--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -22,8 +22,8 @@
   align-items: flex-start;
   gap: 32px;
   padding: 20px 12px;
-  border-top: 1px solid var(--Text-secondary, #000);
-  background: var(--Background-components, #bcbfc3);
+  border-top: 1px solid var(--black);
+  background: var(--light-grey);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 #header-nav-categories {
@@ -38,8 +38,8 @@
 }
 #header-nav-light {
   border-radius: 4px;
-  border: 1px solid var(--Text-secondary, #000);
-  background: var(--Text-main, #515050);
+  border: 1px solid var(--black);
+  background: var(--dark-grey);
   display: flex;
   padding: 8px 12px;
   flex-direction: column;
@@ -47,12 +47,12 @@
   align-items: center;
   gap: 10px;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
   .header-nav {
     display: none;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .burger-menu {
     display: none;
   }
@@ -70,8 +70,8 @@
 }
 .header-nav-light {
   border-radius: 4px;
-  border: 1px solid var(--Text-secondary, #000);
-  background: var(--Text-main, #515050);
+  border: 1px solid var(--black);
+  background: var(--dark-grey);
   display: flex;
   padding: 8px 12px;
   flex-direction: column;
