--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -2,6 +2,7 @@
   font-family: "Caesar Dressing";
   font-size: 40px;
   font-weight: 400;
+  color: var(--black);
 }
 .header-nav {
   display: flex;
@@ -67,11 +68,24 @@
   font-family: "Bubbler One";
   font-size: 20px;
   font-weight: 400;
+  color: var(--black);
 }
 .header-nav-light {
   border-radius: 4px;
-  border: 1px solid var(--black);
-  background: var(--dark-grey);
+  border: 1px solid #000;
+  background: #515050;
+  display: flex;
+  padding: 8px 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.header-nav-dark {
+  border-radius: 4px;
+  border-right: 1px solid var(--Text-secondary, #fff);
+  background: var(--Text-secondary, #fff);
+  border: 1px solid #fff;
   display: flex;
   padding: 8px 12px;
   flex-direction: column;
