--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -20,6 +20,7 @@
   width: calc((100% - 20px) / 2);
   background-color: var(--white);
 }
+
 .card-r {
   display: inline-flex;
   flex-direction: column;
@@ -166,4 +167,7 @@
     margin-left: 12px;
     margin-right: 12px;
   }
+}
+.hidden {
+  display: none;
 }
