--- a/src/scss/modules/_pantheon-nav.scss
+++ b/src/scss/modules/_pantheon-nav.scss
@@ -96,6 +96,7 @@
   font-size: 20px;
   font-weight: 400;
   border: none;
+  transition-duration: 0.5s;
 }
 .pantheon-nord:hover svg {
   stroke: var(--green);
@@ -122,6 +123,7 @@
   font-size: 20px;
   font-weight: 400;
   border: none;
+  transition-duration: 0.5s;
 }
 .pantheon-romain:hover svg {
   stroke: var(--red);
